--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -110,6 +110,10 @@ body{
     background-color: yellow !important;
 }
 
+.expired{
+    color: red !important;
+}
+
 .subProcess{
     font-weight: bold !important;
     font-style: italic !important;
